fix(EuiDataGrid): ensure manual text-align styles are applied

--- a/src/components/datagrid/body/header/_data_grid_header_row.scss
+++ b/src/components/datagrid/body/header/_data_grid_header_row.scss
@@ -42,6 +42,9 @@
 
     .euiDataGridHeaderCell__content {
       @include euiTextTruncate;
+
+      flex-grow: 1; // ensures content stretches and allows for manual layout styles to apply
+      text-align: left; // overwrites inherited 'center' styles from button
     }
 
     .euiDataGridHeaderCell__sortingArrow {
